--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,26 +8,21 @@ eureka:
     hostname: localhost
 spring:
   application:
-    name: book_service
+    name: book-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/book_service?useTimezone=true&serverTimezone=UTC
     username: root
     password: root
-  flyway:
-    url: jdbc:mysql://localhost:3306/
-    schemas:
-    - book_Service
-    user: root
-    password: root
-  jackson:
-    default-property-inclusion: NON_NULL
-    serialization:
-      fail-on-empty-beans: false
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect  
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  flyway:
+    url: jdbc:mysql://localhost:3306/
+    schemas: book_service
+    user: root
+    password: root
