--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,13 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     hostname: localhost
+resilience4j:
+  retry:
+    instances:
+      foo-bar-att:
+        max-attempts: 5
+      default:
+        max-attempts: 5
 spring:
   application:
     name: book-service
