Last version preparing dockerization

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,13 @@ spring:
     schemas: book_service
     user: root
     password: root
+  sleuth:
+    sampler:
+      probability: 1.0
+#springdoc:
+  #show-actuator: true
+  #api-docs:
+    #path: book-service/v3/api-docs
+  #swagger-ui:
+    #config-url: /book-service/v3/api-docs/swagger-config
+    #url: /book-service/v3/api-docs
